# QueryBot

./: .gitignore  README.md  README_CN.md  env.example  pyproject.toml  start_local.sh
backend/: __init__.py
backend/sql_assistant/: api.py  async_executor.py
backend/sql_assistant/graph/: assistant_graph.py
backend/sql_assistant/nodes/: data_source_node.py  error_analysis_node.py  feasibility_check_node.py  intent_analysis_node.py  keyword_extraction_node.py  permission_control_node.py  query_example_node.py  query_rewrite_node.py  result_generation_node.py  sql_execution_node.py  sql_generation_node.py  table_structure_node.py  term_mapping_node.py
backend/sql_assistant/routes/: node_routes.py
backend/sql_assistant/states/: assistant_state.py
backend/sql_assistant/utils/: format_utils.py  user_mapper.py
data/config/: collections_config.json
frontend/: app.py  ui_components.py
frontend/page/: sql_assistant.py
tools/: README.md  __init__.py  config_validator.py  setup_demo_environment.py
tools/admin/: README.md  admin_app.py  vector_db_management.py
tools/data_generation/: __init__.py  generate_recruitment_data.py
tools/mysql_import/: __init__.py  auto_import_mysql.py
tools/vector_db_import/: __init__.py  auto_import_vector_db.py
utils/: __init__.py
utils/core/: __init__.py  config.py  constants.py  error_handler.py  logging_config.py  streamlit_config.py
utils/factories/: __init__.py  database.py  embedding.py  milvus.py
utils/services/: __init__.py  llm.py  milvus_service.py
